small styling change

--- a/sections/category-template.liquid
+++ b/sections/category-template.liquid
@@ -1,6 +1,7 @@
 <!-- /sections/category-template.liquid -->
 {% comment %}
 This is the for Pages: Collections
+Not ot be confused with Collection Page 
 {% endcomment %}
 
 {%- assign item = section.settings -%}
@@ -130,8 +131,8 @@ This is the for Pages: Collections
 }
 .cat-3 .cat-right .cat-text {
   align-self: flex-end;
-  width: 70%;
-  margin: 100px 0;
+  width: 60%;
+  margin: 150px 100px 100px 0;
 }
 .cat-4 {
   background-repeat: no-repeat;
@@ -144,6 +145,11 @@ This is the for Pages: Collections
   }
   .cat-2 {
     height: 500px;
+  }
+  .cat-3 .cat-right .cat-text {
+    align-self: flex-end;
+    width: 60%;
+    margin: 150px 0 100px 0;
   }
   .cat-img {
     height: 500px;
