--- a/assets/theme_andy.js.liquid
+++ b/assets/theme_andy.js.liquid
@@ -549,12 +549,12 @@ slate.Variants = (function() {
      * @return {event} variantPriceChange
      */
     _updatePrice: function(variant) {
-      if (
+      /* if (
         variant.price === this.currentVariant.price &&
         variant.compare_at_price === this.currentVariant.compare_at_price
       ) {
         return;
-      }
+      } */
 
       this.$container.trigger({
         type: 'variantPriceChange',
@@ -3741,3 +3741,18 @@ var afterResize = (function () {
     t[uniqueId] = setTimeout(callback, ms);
   };
 })();
+
+/* Deactivate first available variant by default */
+$(document).ready(function() {
+  if( typeof(productOptions ) != "undefined" ){
+    for(i=0;i<productOptions.length;i++) {
+      $('.single-option-selector:eq('+ i +')')
+      .filter(function() {
+        return $(this).find('option').length > 1
+      })
+      .prepend('<option value="">Pick a ' + productOptions[i][i] + '</option>')
+      .val('')
+      .trigger('change');
+    }
+  }
+});
