--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -6,7 +6,12 @@
     <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
     <meta itemprop="image" content="{{ product.featured_image.src | img_url: 'grande' }}">
 
-    {% assign current_variant = product.selected_or_first_available_variant %}
+    {% if product.variants.size > 1 %}
+      {% assign current_variant = product.selected_variant %}
+    {% else %}
+      {% assign current_variant = product.first_available_variant %}
+    {% endif %}
+
     {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
 
     <div class="grid product-single">
@@ -151,9 +156,6 @@
               </span>
             </div>
 
-
-
-
             <meta itemprop="priceCurrency" content="{{ shop.currency }}">
             <link itemprop="availability" href="http://schema.org/{% if product.available %}InStock{% else %}OutOfStock{% endif %}">
 
@@ -184,7 +186,6 @@
                             {% endunless %}
                           {% endif %}
                           <input type="radio"
-                            {% if option.selected_value == value %} checked="checked"{% endif %}
                             {% unless variant_label_state %} disabled="disabled"{% endunless %}
                             value="{{ value | escape }}"
                             data-index="option{{ option_index }}"
@@ -207,7 +208,6 @@
                             {% endunless %}
                           {% endif %}
                           <input type="radio"
-                            {% if option.selected_value == value %} checked="checked"{% endif %}
                             {% unless variant_label_state %} disabled="disabled"{% endunless %}
                             value="{{ value | escape }}"
                             data-index="option{{ option_index }}"
@@ -237,8 +237,7 @@
               <select name="id" id="ProductSelect" class="product-single__variants no-js">
                 {% for variant in product.variants %}
                   {% if variant.available %}
-                    <option {% if variant == product.selected_or_first_available_variant %}
-                      selected="selected" {% endif %}
+                    <option
                       data-sku="{{ variant.sku }}"
                       value="{{ variant.id }}">
                       {{ variant.title }} - {{ variant.price | money_with_currency }}
@@ -266,7 +265,7 @@
                     {% if current_variant.available %}
                       {{ 'products.product.add_to_cart' | t }}
                     {% else %}
-                      {{ 'products.product.sold_out' | t }}
+                      {{ 'products.product.unavailable' | t }}
                     {% endif %}
                   </span>
                 </button>
@@ -432,6 +431,12 @@ $('.next-thumbnail').click(function(){
     $('#ProductThumbs-Container ul').slick('slickNext');
 });
 });
+var productOptions = [];
+  {% for option in product.options %}
+    var optionObj = {};
+    optionObj[ {{ forloop.index0 }} ] = "{{ product.options[forloop.index0] }}";
+    productOptions.push(optionObj);
+  {% endfor %}
 </script>
 
 {% unless product == empty %}
