--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -969,6 +969,7 @@ tr:first-child td {
 
 
 /*================ Partials | Theme typography overrides ================*/
+
 body,
 input,
 textarea,
@@ -1515,6 +1516,7 @@ a {
   color: $colorTextBody;
   text-decoration: none;
   background: transparent;
+  cursor: pointer;
 
   &:hover {
     color: $colorTextBody;
@@ -5390,7 +5392,7 @@ footer {
 /*******************
 	PRODUCT GRID ITEM - SLIDER
 *******************/
-.product_item_wrapper {
+.grid__item, .product_item_wrapper{
 
     .grid-product__wrapper {
         display: flex;
