--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -39,7 +39,7 @@
 {% capture img_wrapper_id %}ProductImageWrapper-{{ product.featured_image.id }}{% endcapture %}
 {%- assign img_url = product.featured_image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
 
-<div product-selector="{{ product.id }}" class="grid__item grid-product {{ grid_item_width }}{% if sold_out %} is-sold-out{% endif %}" data-product-card>
+<div product-selector="{{ product.id }}" class="grid__item grid-product {{ grid_item_width }}{% if sold_out %} is-sold-out{% endif %}" data-product-card style="padding: 0 2rem 2rem;">
   <div class="grid-product__wrapper">
     <div class="grid-product__image-wrapper">
       <a class="grid-product__image-link{% unless product.featured_image.src == blank %} grid-product__image-link--loading{% endunless %}" href="{{ product.url | within: collection }}" data-image-link>
@@ -74,32 +74,32 @@
         </div>
       {% endif %}
     </div>
-
-    <a href="{{ product.url | within: collection }}" class="grid-product__meta">
-      <span class="grid-product__title">{{ product.title }}</span>
-      <span class="grid-product__price-wrap">
-        <span class="long-dash">—</span>
-        <span class="grid-product__price">
-          {% if on_sale %}
+    <div class="collections-meta-container">
+      <a href="{{ product.url | within: collection }}" class="grid-product__meta">
+        <span class="grid-product__title">{{ product.title }}</span>
+        <span class="grid-product__price-wrap">
+          <span class="grid-product__price">
+            {% if on_sale %}
             <span class="visually-hidden">{{ 'products.general.sale_price' | t }}</span>
-          {% else %}
-             <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
-          {% endif %}
-          {% if product.price_varies %}
+            {% else %}
+            <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
+            {% endif %}
+            {% if product.price_varies %}
             {{ product.price_min | money_without_trailing_zeros }}
             <span class="icon-fallback-text">
               <span class="icon icon-plus grid-product__price-min" aria-hidden="true"></span>
               <span class="fallback-text">+</span>
             </span>
-          {% else %}
+            {% else %}
             {{ product.price | money_without_trailing_zeros }}
-          {% endif %}
+            {% endif %}
+          </span>
         </span>
-      </span>
-      {% if section.settings.product_vendor_enable %}
+        {% if section.settings.product_vendor_enable %}
         <p class="grid-product__vendor">{{ product.vendor }}</p>
-      {% endif %}
-    </a>
-     {% include "panda-swatch" %}
+        {% endif %}
+      </a>
+      {% include "panda-swatch" %}
+    </div>
   </div>
 </div>
