--- a/snippets/search-bar.liquid
+++ b/snippets/search-bar.liquid
@@ -25,7 +25,7 @@
   {% comment %}<input type="hidden" name="type" value="product">{% endcomment %}
   <input type="search" name="q" value="{{ search.terms | escape }}" placeholder="{{ 'general.search.placeholder' | t }}" class="input-group-field" aria-label="{{ 'general.search.placeholder' | t }}">
   <span class="input-group-btn">
-    <button type="submit" class="{{ search_btn_style }} icon-fallback-text">
+    <button type="submit" class="search-btn {{ search_btn_style }} icon-fallback-text">
       <span class="icon icon-search" aria-hidden="true"></span>
       <span class="fallback-text">{{ 'general.search.submit' | t }}</span>
     </button>
