--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -372,7 +372,12 @@
   }
   .slick-slider div { transition: all 2s; }
 }
-
+@media screen and (max-width: 1024px) {
+  .product-single__thumbnails {
+    position: relative;
+    top: 0;
+  }
+}
 </style>
 
 <script>
