--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4481,6 +4481,7 @@ input {
   font-weight: 700;
   letter-spacing: -1px;
   line-height: 1.1;
+  text-transform: uppercase;
 }
 
 .header_3 {
@@ -5538,7 +5539,7 @@ footer {
 	COLLECTIONS
 *******************/
 
-#CollectionSection {
+#CollectionSection, .search-grid {
 
     header {
         text-transform: uppercase;
