--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -186,5 +186,7 @@
   </ul>
   <script type=”text/javascript” src=”{{shop.secure_url}}/tools/csp/csp.js?shop={{shop.permanent_domain}}”></script>
 {% include 'back-in-stock-helper' %}
-{% include 'social-login' %}</body>
+{% include 'social-login' %}
+{% include 'search-autocomplete' %}
+</body>
 </html>
