--- a/templates/search.json.liquid
+++ b/templates/search.json.liquid
@@ -6,7 +6,8 @@
     {
       "title"    : {{ product.title | json }},
       "url"      : {{ product.url | within: product.collections.last | json }},
-      "thumbnail": {{ product.featured_image.src | product_img_url: 'thumb' | json }}
+      "thumbnail": {{ product.featured_image.src | product_img_url: 'thumb' | json }},
+      "price": {{ product.price | money | json }}
     }
     {% unless forloop.last %},{% endunless %}
   {% endfor %}
