--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -146,14 +146,23 @@
                 </span>
                 <span id="ComparePriceA11y" class="visually-hidden" aria-hidden="true">{{ 'products.general.sale_price' | t }}</span>
               {% endif %}
-
+              {%- if current_variant.price -%}
+                <span id="ProductPrice"
+                  class="product-single__price{% if current_variant.compare_at_price > current_variant.price %} on-sale{% endif %}"
+                  itemprop="price"
+                  content="{{ current_variant.price | divided_by: 100.00 }}"
+                  {% unless current_variant.available %}aria-hidden="true"{% endunless %}>
+                  {{ current_variant.price | money }}
+                </span>
+              {%- else -%}
               <span id="ProductPrice"
-                class="product-single__price{% if current_variant.compare_at_price > current_variant.price %} on-sale{% endif %}"
+                class="product-single__price{% if product.first_available_variant.compare_at_price > product.first_available_variant.price %} on-sale{% endif %}"
                 itemprop="price"
-                content="{{ current_variant.price | divided_by: 100.00 }}"
-                {% unless current_variant.available %}aria-hidden="false"{% endunless %}>
-                {{ current_variant.price | money }}
+                content="{{ product.first_available_variant.price | divided_by: 100.00 }}"
+                {% unless product.first_available_variant.available %}aria-hidden="true"{% endunless %}>
+                {{ product.first_available_variant.price | money }}
               </span>
+              {%- endif -%}
             </div>
 
             <meta itemprop="priceCurrency" content="{{ shop.currency }}">
@@ -220,7 +229,7 @@
                     {% else %}
                       <select class="single-option-selector__radio single-option-selector-{{ section.id }} product-form__input" id="SingleOptionSelector-{{ forloop.index0 }}" data-index="option{{ forloop.index }}">
                         {% for value in option.values %}
-                          <option value="{{ value | escape }}"{% if option.selected_value == value %} selected="selected"{% endif %}>{{ value | escape }}</option>
+                          <option value="{{ value | escape }}">{{ value | escape }}</option>
                         {% endfor %}
                       </select>
                     {% endif %}
@@ -250,7 +259,10 @@
                 {% endfor %}
               </select>
 
-              {% include 'panda-swatch' with 'product' %}
+              <div class="panda__swatch" style="display: none">
+                {% include 'panda-swatch' with 'product' %}
+              </div>
+
 
               {% if section.settings.quantity_enabled %}
               <div class="product-single__quantity">
@@ -402,6 +414,9 @@ $(document).ready(function() {
     offset_top: 140,
     inner_scrolling: true
   });
+  $('.single-option-radio').click(function(){
+    $('.panda__swatch').slideDown()
+  })
 
 // Smooth scroll to id on page
   $('a[href*=\\#]').on('click', function(e){
